# Ruse

./: README.md
Ruse/: ruse.cabal
Ruse/app/: Main.hs
Ruse/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
Ruse/dist-newstyle/packagedb/ghc-8.6.5/: hw3-0.1.0.0-inplace.conf  package.cache
Ruse/src/Ruse/: Eval.hs  Parser.hs  Syntax.hs  Tests.hs
