name:                ruse
version:             0.1.0.0
-- synopsis:
-- description:
author:              Fan Gao
maintainer:          gaof@cs.wisc.edu
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Ruse.Syntax, Ruse.Parser, Ruse.Eval, Ruse.Tests
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.9, containers, QuickCheck, random, parser-combinators
  hs-source-dirs:      src
  default-language:    Haskell2010

executable hw3
  main-is:             Main.hs
  hs-source-dirs:      app
  -- other-modules:       
  -- other-extensions:
  build-depends:       ruse, base >=4.9, containers
  ghc-options:         -fwarn-incomplete-patterns -fwarn-tabs -fno-warn-type-defaults
  -- hs-source-dirs:
  default-language:    Haskell2010
